--- a/nginx.yml
+++ b/nginx.yml
@@ -1,17 +1,19 @@
 ---
+# Playbook: Установить и поднять nginx по порту 8080
 - name: NGINX | Install and configure NGINX
   hosts: nginx 
   become: true
+  # Задаем переменную для нестандартного порта 
   vars:
     nginx_listen_port: 8080
-
   tasks:
+      # Play для обновления репозиториев
     - name: update
       apt:
         update_cache=yes
       tags:
         -update apt
-    
+      # Play для установки nginx 
     - name: NGINX | Install NGINX
       apt: 
         name: nginx
@@ -20,8 +22,9 @@
         - restart nginx
       tags:
         - nginx-package
-
+      # Play для правки nginx.conf  
     - name: NGINX | Create NGINX config file from template
+      # Подтягиваем конфиг nginx из шаблона jinja2 и правим nginx.conf на хосте
       template:
         src: templates/nginx.conf.j2
         dest: /etc/nginx/nginx.conf
@@ -29,7 +32,7 @@
         - reload nginx
       tags:
         - nginx-configuration
-  
+  # Handlers для перезапуска службы и сервера nginx
   handlers:
   - name: restart nginx
     systemd:
